Revision history for Perl extension HTML::Timeline.

1.10  2017-04-16T18:01:00
	- Replace 'perl' with $^X in t/test.t. Reported by Slaven Rezic. See RT#121181.

1.09  2017-04-16T11:16:00
	- Adopt new repo structure. For details, see
		http://savage.net.au/Ron/html/My.Workflow.for.Building.Distros.html.
	- Fix issue with open(my $fh...) used twice in generate_xml_file(). The 2nd use of 'my' was
		chopped. Reported by Nigel Horne. See RT#120946.
	- Add the option validate_gedcom_file, which takes a Boolean value, to the set of options
		accepted by new() and hence accepted by bin/timeline.pl. It defaults to 0, so that
		validate() is no longer called by default. Suggested by Nigel Horne. See RT#120973.
	- In bin/timeline.pl, document much more clearly what values are taken by each option.
		Do the same in the pod.
	- Fix docs for new(). It takes a hash of options, not a hashref.
	- Add specific versions of pre-reqs in Makefile.PL.
	- Rewrite t/test.t to run bin/timeline.pl under control of Capture::Tiny, and check its output.
		This requires Capture::Tiny as a new pre-req.

1.08  Sun Jan 25 14:07:00 2014
	- Replace /usr/bin/perl with /usr/bin/env perl.
	- Replace common::sense with use strict and use warnings, to get uninit var warnings.
	- Rename CHANGES to Changes, as per CPAN::Changes::Spec.
	- Rewrite bareword filehandles (INX) to use a variable (my $fh).
	- Rename github repo from html--timeline to HTML-Timeline - My new standard.
		Update Build.PL and Makefile.PL to match.
	- Reformat the docs, and this file, slighty, to be <= 100 chars per line - My new standard.
	- Move t/pod.t to xt/author/.

1.07  Sun Feb 21 12:55:20 2010
	- Remove text 'All rights reserved' (for Debian licensing).
	- Remove POD heads 'Required Modules' and 'Changes'.

1.06  Wed Feb 10 13:52:47 2010
	- Add META.yml. Update MANIFEST.SKIP. Add MANIFEST and MYMETA.yml.

1.05  Fri Nov 13 13:20:00 2009
	- Run dos2unix. This only affects examples/bach.ged.

1.04  Fri Aug 29 14:44:00 2008