@@ -30,17 +30,23 @@ my(%params) =
 	PL_FILES  => {},
 	PREREQ_PM =>
 	{
-		'accessors'			=> 0,
+		'accessors'			=> 1.01,
 		'Capture::Tiny'		=> 0.46,
 		'Carp'				=> 0,
 		'Config::IniFiles'	=> 2.94,
 		'Gedcom'			=> 1.20,
 		'Gedcom::Date'		=> 0.10,
+		'Getopt::Long'		=> 0,
 		'HTML::Template'	=> 2.95,
 		'Path::Class'		=> 0.37,
+		'perl'				=> 0,
+		'Pod::Usage'		=> 0,
+		'strict'			=> 0,
+		'warnings'			=> 0,
 	},
 	TEST_REQUIRES =>
 	{
+		'Test::More' => 1.001002,
 	},
 	VERSION_FROM => 'lib/HTML/Timeline.pm',
 );
